kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dec4iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dec4iot
  template:
    metadata:
      name: dec4iot
      labels:
        app: dec4iot
    spec:
      containers:
      - name: dec4iot
        image: oydeu/dc-iot:latest
        ports:
        - containerPort: 3000
