kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dec4iot
spec:
  selector:
    app: dec4iot
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
