kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dec4iot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dec4iot.data-container.net
    secretName: dec4iot-tls
  rules:
  - host: dec4iot.data-container.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dec4iot
            port:
              number: 80
